--- a/imagemontage/css/style.css
+++ b/imagemontage/css/style.css
@@ -1,4 +1,38 @@
-.clip {
-    position: absolute;
-    clip: rect(0 0 0 0);
+*{
+	margin: 0;
+	padding: 0;
+	font-family: "Microsoft Yahei";
 }
+
+html,body{
+	width: 100%;
+	height: 100%;
+}
+.wrapper{
+	display: grid;
+	grid-template-columns: 25% 25% 25% 25%;
+	grid-template-rows: 20% 20% 20% 20% 20%;
+}
+
+.item1{
+	grid-column-start: 1;
+	grid-column-end: 4;
+}
+/* .uploadDiv{
+	position: relative;
+	left: 5%;
+	top: 5%;
+}
+
+.inputDiv{
+	position: relative;
+	left: 5%;
+	right: 5%;
+	top: 10%;
+	text-align: center;
+}
+
+.btnDiv{
+	position: relative;
+	top: 15%;
+} */
