--- a/imagemontage/css/style.css
+++ b/imagemontage/css/style.css
@@ -1,23 +1,33 @@
-*{
-	margin: 0;
-	padding: 0;
-	font-family: "Microsoft Yahei";
+* {
+    margin: 0;
+    padding: 0;
+    font-family: "Microsoft Yahei";
 }
 
-html,body{
-	width: 100%;
-	height: 100%;
+html,
+body {
+    width: 100%;
+    height: 100%;
 }
-.wrapper{
-	display: grid;
-	grid-template-columns: 25% 25% 25% 25%;
-	grid-template-rows: 20% 20% 20% 20% 20%;
+p{
+	font-weight: bold;
+}
+.sideDiv {
+    position: fixed;
+    top: 3vh;
+    left: 1vw;
+    width: 23vw;
 }
 
-.item1{
-	grid-column-start: 1;
-	grid-column-end: 4;
+.imageDiv{
+	display: block;
+	position: absolute;
+	left: 23vw;
 }
+.inputDiv>div{
+	height: 8vh;
+}
+
 /* .uploadDiv{
 	position: relative;
 	left: 5%;
